# FinancialControl

./: README.md  main.py  pyproject.toml
financial_control/: balance.py  data_types.py
tests/: test_fastapi_training.py  test_financial_control.py
