[tool.poetry]
name = "FastAPI_Training"
version = "0.1.0"
description = ""
authors = ["MathXCruz <matheus.cruz1996@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
